1998-02-26  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* FEntity.[hm]: (investingIn:borrowingFrom:,incident) now return BOOL.
	Constify argument to setEntityName:.

	* FEntity.m: Don't include string.h, stdio.h, stdlib.h,
	tkobjc.h, or simtools.h.

	* BankObserverSwarm.m: Don't include collections.h or objectbase.h.
	Include simtoolsgui.h.

	* BankObserverSwarm.h: Don't include objectbase.h, activity.h,
	collections.h, simtools.h, or gui.h.  Include simtoolsgui.h
	and simtools/GUISwarm.h.

	* BankModelSwarm.m: Don't include stdlib.h or simtools.h.  Include
	random.h and misc.h.
	([BankModelSwarm +createBegin:]): Use YES instead of 1 for
	setHideResult.
	Reformatting throughout.

	* BankModelSwarm.h: Don't include activity.h or collections.h.
	Reformatting throughout.

1998-02-25  Alex Lancaster  <alex@santafe.edu>

	* BankObserverSwarm.m ([BankObserverSwarm -buildObjects]): Removed
	reference to globalTkInterp for Canvas creation with ([graphCanvas
	packFillLeft:1]) and the GUI_UPDATE_IDLE_TASKS() macro which
	removes any remaining explicit Tk GUI references.

1998-01-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* BankObserverSwarm.m ([BankObserverSwarm -buildObjects]): Use
	Graph instead of BLTGraph for investorGraph.

	* main.m (main): Constify argv.

1998-01-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* FLink.h: Reformatting throughout.

	* BankObserverSwarm.m ([BankObserverSwarm -buildObjects]): Send
	waitForControlEvent to actionCache, not controlPanel.
	([BankObserverSwarm -buildObjects]): Use renamed setTitle and
	setAxisLabelsX:Y: methods.

	* BankObserverSwarm.h: Include gui.h.
	(BankObserverSwarm): Make graphCanvas conform to the Graph
	protocol instead of being statically typed to BLTGraph.  Make
	investorData and borrorerData conform to the GraphElement protocol
	instead of being statically typed to GraphElement.  Make
	investorGrapher and borrowerGrapher conform to ActiveGraph instead
	of being statically typed to ActiveGraph.