@@ -1,11 +1,3 @@
-#define __USE_FIXED_PROTOTYPES__  // for gcc headers
-
-#include <string.h>
-#include <stdio.h>
-#include <stdlib.h>
-
-#import <tkobjc.h>
-
 #import "FNet.h"
 
 @implementation FNet
