@@ -1,3 +1,9 @@
+1998-03-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* ILink.m: Don't Include tkobjc.h.  Reformatting throughout.
+
+	* FNet.m: Don't include string.h, stdio.h, stdlib.h, or tkobjc.h.
+
 1998-02-26  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* FEntity.[hm]: (investingIn:borrowingFrom:,incident) now return BOOL.
